basic authentication rework; certificate profiles draft
