# ca-api/ca-api-certificate-profiles/src/main/resources/api.yaml
@@ -21,6 +21,13 @@ schemes:
   - "http"
   - "https"
   
+securityDefinitions:
+  UserSecurity:
+    type: basic
+    
+security:
+  - UserSecurity: []
+  
 consumes:
   - "application/json"
   
